--- a/configs.yml
+++ b/configs.yml
@@ -1,5 +1,5 @@
 title: Yifan (Tiffany) Hu
-logo: /Users/tiff1101/Downloads/biopic.jpg
+logo: /biopic/biopic.jpg
 description: |
   Welcome to my personal website. I'm Tiffany Hu, a passionate data scientist dedicated to uncovering insights from data and creating impactful solutions.
 show_downloads: false
