--- a/configs.yml
+++ b/configs.yml
@@ -4,9 +4,9 @@ description: |
   Welcome to my personal website. I'm Tiffany Hu, a passionate data scientist dedicated to uncovering insights from data and creating impactful solutions.
 show_downloads: false
 theme: jekyll-theme-minimal
-remote_theme: pages-themes/midnight@v0.2.0
-plugins:
-  - jekyll-remote-theme
+#remote_theme: pages-themes/midnight@v0.2.0
+#plugins:
+#  - jekyll-remote-theme
 
 # Additional configuration options
 author: Tiffany Hu
