--- a/configs.yml
+++ b/configs.yml
@@ -1,25 +1,34 @@
+# title: Yifan (Tiffany) Hu
+# logo: /biopic/biopic.jpg
+# description: |
+#   Welcome to my personal website. I'm Tiffany Hu, a passionate data scientist dedicated to uncovering insights from data and creating impactful solutions.
+# show_downloads: false
+# theme: jekyll-theme-minimal
+# #remote_theme: pages-themes/midnight@v0.2.0
+# #plugins:
+# #  - jekyll-remote-theme
+
+# # Additional configuration options
+# author: Tiffany Hu
+# email: tiffanyy1101@gmail.com
+# social:
+#   linkedin: https://www.linkedin.com/in/tiffany-hu-career1101/
+#   github: https://github.com/Tiff-Hu
+
+
+
+# # Footer customization
+# footer: |
+#   © 2024 Tiffany Hu. All rights reserved.
+#   Built with ❤️ using Jekyll and the Midnight theme.
+
 title: Yifan (Tiffany) Hu
 logo: /biopic/biopic.jpg
-description: |
-  Welcome to my personal website. I'm Tiffany Hu, a passionate data scientist dedicated to uncovering insights from data and creating impactful solutions.
+#description: text below image
 show_downloads: false
 theme: jekyll-theme-minimal
-#remote_theme: pages-themes/midnight@v0.2.0
-#plugins:
-#  - jekyll-remote-theme
-
-# Additional configuration options
-author: Tiffany Hu
-email: tiffanyy1101@gmail.com
-social:
-  linkedin: https://www.linkedin.com/in/tiffany-hu-career1101/
-  github: https://github.com/Tiff-Hu
-
-
-
-# Footer customization
-footer: |
-  © 2024 Tiffany Hu. All rights reserved.
-  Built with ❤️ using Jekyll and the Midnight theme.
+# remote_theme: pages-themes/midnight@v0.2.0
+# plugins:
+# - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 
