--- a/configs.yml
+++ b/configs.yml
@@ -23,7 +23,7 @@
 #   Built with ❤️ using Jekyll and the Midnight theme.
 
 title: Yifan (Tiffany) Hu
-logo: /biopic/biopic.jpg
+logo: /biopic/biopic.JPG
 #description: text below image
 show_downloads: false
 theme: jekyll-theme-minimal
