--- a/configs.yml
+++ b/configs.yml
@@ -1,6 +1,6 @@
 
 title: Yifan (Tiffany) Hu
-logo: /biopic/biopic2.JPG
+logo: /biopic/biopic2.jpg
 show_downloads: false
 theme: jekyll-theme-minimal
 
