--- a/configs.yml
+++ b/configs.yml
@@ -1,5 +1,5 @@
 
-title: Yifan (Tiffany) Hu
+#title: Yifan (Tiffany) Hu
 logo: /biopic/biopic.JPG
 show_downloads: false
 theme: jekyll-theme-minimal
