--- a/configs.yml
+++ b/configs.yml
@@ -1,6 +1,6 @@
 
 title: Yifan (Tiffany) Hu
-logo: /assets/23fcb415b6258a21c6382f7808c9e72c.JPG
+#logo: /assets/23fcb415b6258a21c6382f7808c9e72c.JPG
 show_downloads: false
 theme: jekyll-theme-minimal
 
