--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 
 title: Tiffany Hu
 email: tiffanyy1101@gmail.com
-description: Welcome to my personal website. I'm Tiffany Hu, a passionate data scientist and software engineer dedicated to uncovering insights from data and creating impactful solutions.
+description: Welcome to my personal website! I'm Tiffany Hu, a passionate data scientist dedicated to uncovering insights from data and creating impactful solutions.
 baseurl: ""
 url: "https://yifanhu.me"
 theme: minima
