--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,10 @@ github_username: Tiff-Hu
 
 # Social links
 social:
-  linkedin: https://www.linkedin.com/in/tiffany-hu-career1101/
-  github: https://github.com/Tiff-Hu
+  - name: LinkedIn
+    url: https://www.linkedin.com/in/tiffany-hu-career1101/
+  - name: GitHub
+    url: https://github.com/Tiff-Hu
   
 
 # Navigation
@@ -33,6 +35,9 @@ navigation:
 footer: |
   © 2024 Tiffany Hu. All rights reserved.
   Built with ❤️ using Jekyll and the Midnight theme.
+
+# Theme settings
+minimal_mistakes_skin: "air"
 
 
 
