Clear title and email fields in _config.yml
Removed personal information from the config file.

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 # show_downloads: false
 # theme: jekyll-theme-minimal
 
-title: Tiffany Hu
-email: tiffanyy1101@gmail.com
+title: 
+email: 
 description: Welcome to my personal website! I'm Tiffany Hu, a passionate data scientist and researcher dedicated to uncovering insights from data and creating impactful solutions.
 baseurl: ""
 url: "https://yifanhu.me"
