--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,9 @@ email:
 description: Welcome to my personal website! I'm Tiffany Hu, a passionate data scientist and researcher dedicated to uncovering insights from data and creating impactful solutions.
 baseurl: ""
 url: "https://yifanhu.me"
-theme: Midnight
+remote_theme: pages-themes/midnight@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 github_username: Tiff-Hu
 
 # Social links
