--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ email:
 description: Welcome to my personal website! I'm Tiffany Hu, a passionate data scientist and researcher dedicated to uncovering insights from data and creating impactful solutions.
 baseurl: ""
 url: "https://yifanhu.me"
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 github_username: Tiff-Hu
